@@ -1,3 +1,4 @@
+- add tv support for fix_srt_naming
 - emby: force audio remux parameter added
 - working on: Remux audio midtrack doesn't playback #2
 - implement: ffprobe - override ffprobe to block PGS from being read by Emby #1
